[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scripts/EnemySpawner.gd" type="Script" id=1]

[node name="EnemySpawner" type="Node"]
script = ExtResource( 1 )

[node name="Container" type="Node" parent="."]

[node name="MeteorTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="MoonTimer" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="MeteorTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="MoonTimer" to="." method="_on_MoonTimer_timeout"]
